# fastapi-redis-celery

./: pyproject.toml
src/: celeryconfig.py  config.py  tasks.py  views.py
