[tool.poetry]
name = "fastapi-redis-celery"
version = "0.1.0"
description = ""
authors = ["NovaCript <glebka.yatsenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
celery = "^5.3.6"
redis = "^5.0.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
